# Code-Forces-Solutions

./: CMakeLists.txt  README.md
Contest #1/: A - Winter Sale.cpp  B. Memo and Momo.cpp  C. Next Alphabet.cpp  D. Ali Baba and Puzzles.cpp  E. Interval Sweep.cpp  F. Adding Bits.cpp
Sheet #1 (Data type - Conditions)/: Area of a Circle.cpp  Basic Data Types.cpp  Difference.cpp  Digits Summation.cpp  M. Capital or Small or Digit.cpp  Max and Min.cpp  Multiples.cpp  N. Char.cpp  O. Calculator .cpp  P. First digit !.cpp  Q. Coordinates of a Point.cpp  R. Age in Days.cpp  S. Interval.cpp  Say Hello With C++.cpp  Simple Calculator.cpp  Summation from 1 to N.cpp  T. Sort Numbers.cpp  The Brothers.cpp  Two numbers.cpp  U. Float or int.cpp  V. Comparison.cpp  W. Mathematical Expression.cpp  Welcome for you with Conditions.cpp  X. Two intervals.cpp  Y. The last 2 digits .cpp  Z. Hard Compare.cpp
