cmake_minimum_required(VERSION 3.28)
project(code_forces_solutions)

set(CMAKE_CXX_STANDARD 17)

add_executable(main
        "main.cpp"
)
add_executable(say_hello
        "Sheet #1 (Data type - Conditions)/Say Hello With C++.cpp"
)
add_executable(data_types
        "Sheet #1 (Data type - Conditions)/Basic Data Types.cpp"
)
add_executable(calculator
        "Sheet #1 (Data type - Conditions)/Simple Calculator.cpp"
)
add_executable(dd
        "Sheet #1 (Data type - Conditions)/Difference.cpp")

add_executable(Area_of_a_Circle
        "Sheet #1 (Data type - Conditions)/Area of a Circle.cpp")