cmake_minimum_required(VERSION 3.28)
project(code_forces_solutions)

set(CMAKE_CXX_STANDARD 17)

add_executable(main
        "main.cpp"
)
add_executable(say_hello
        "Sheet #1 (Data type - Conditions)/Say Hello With C++.cpp"
)
add_executable(data_types
        "Sheet #1 (Data type - Conditions)/Basic Data Types.cpp"
)
add_executable(calculator
        "Sheet #1 (Data type - Conditions)/Simple Calculator.cpp"
)
add_executable(dd
        "Sheet #1 (Data type - Conditions)/Difference.cpp")

add_executable(Area_of_a_Circle
        "Sheet #1 (Data type - Conditions)/Area of a Circle.cpp"
        "Sheet #1 (Data type - Conditions)/Multiples.cpp"
        "Sheet #1 (Data type - Conditions)/The Brothers.cpp")
add_executable(Digits_Summation
        "Sheet #1 (Data type - Conditions)/Digits Summation.cpp")
add_executable(Summation_from_1_to_N
        "Sheet #1 (Data type - Conditions)/Summation from 1 to N.cpp")
add_executable(Two_numbers
        "Sheet #1 (Data type - Conditions)/Two numbers.cpp")
add_executable(Welcome_for_yo_with_Conditions
        "Sheet #1 (Data type - Conditions)/Welcome for you with Conditions.cpp")
add_executable(Multiples
        "Sheet #1 (Data type - Conditions)/Multiples.cpp")
add_executable(Max_and_Min
        "Sheet #1 (Data type - Conditions)/Max and Min.cpp")
add_executable(The_Brothers
        "Sheet #1 (Data type - Conditions)/The Brothers.cpp")
add_executable(M
        "Sheet #1 (Data type - Conditions)/M. Capital or Small or Digit.cpp")
add_executable(N
        "Sheet #1 (Data type - Conditions)/N. Char.cpp")
add_executable(O
        "Sheet #1 (Data type - Conditions)/O. Calculator .cpp")
add_executable(P
        "Sheet #1 (Data type - Conditions)/P. First digit !.cpp")
add_executable(Q
        "Sheet #1 (Data type - Conditions)/Q. Coordinates of a Point.cpp")
add_executable(R
        "Sheet #1 (Data type - Conditions)/R. Age in Days.cpp")
add_executable(S
        "Sheet #1 (Data type - Conditions)/S. Interval.cpp")
add_executable(T
        "Sheet #1 (Data type - Conditions)/T. Sort Numbers.cpp")